# live555

./: .gitignore  CMakeLists.txt  README.md  live555.sln
BasicUsageEnvironment/: BasicUsageEnvironment.vcxproj  CMakeLists.txt
UsageEnvironment/: CMakeLists.txt  UsageEnvironment.vcxproj
WindowsAudioInputDevice/: CMakeLists.txt  WindowsAudioInputDevice.vcxproj  WindowsAudioInputDevice_Test.vcxproj
groupsock/: CMakeLists.txt  groupsock.vcxproj
hlsProxy/: CMakeLists.txt  hlsProxy.vcxproj  live555HLSProxy.cpp
liveMedia/: CMakeLists.txt  liveMedia.vcxproj
mediaServer/: CMakeLists.txt  mediaServer.vcxproj
proxyServer/: CMakeLists.txt  proxyServer.vcxproj
testProgs/: testProgs.mak  testProgs.vcxproj
